--- a/Conectados2/appsettings.json
+++ b/Conectados2/appsettings.json
@@ -1,7 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "AppSettings": {
+        "Secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
     }
-  }
 }
