--- a/Conectados2/package.json
+++ b/Conectados2/package.json
@@ -63,6 +63,21 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "amazing-time-picker": "^1.5.3"
+    "@angular/animations": "^4.4.4",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/platform-server": "^4.4.4",
+    "@angular/router": "^4.4.4",
+    "@auth0/angular-jwt": "^1.1.0",
+    "@types/jwt-decode": "^2.2.1",
+    "amazing-time-picker": "^1.5.3",
+    "angular2-jwt": "^0.2.3",
+    "jwt-decode": "^2.2.0"
   }
 }
