--- a/Conectados2/appsettings.json
+++ b/Conectados2/appsettings.json
@@ -1,6 +1,8 @@
 {
     "AppSettings": {
-        "Secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+        "Secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+        "ConexionJohhny": "data source=JHONGGER-PC;initial catalog=conectaDB;;user id=sa;password=root;integrated security=True;MultipleActiveResultSets=True",
+        "ConexionMarthin": "data source=NotHP;initial catalog=conectaDB;;user id=sa;password=root;integrated security=True;MultipleActiveResultSets=True"
     },
     "Logging": {
         "IncludeScopes": false,
