--- a/Conectados2/package.json
+++ b/Conectados2/package.json
@@ -7,20 +7,20 @@
   },
   "devDependencies": {
     "@angular-devkit/core": "^0.4.8",
-    "@angular/animations": "5.2.9",
+    "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
-    "@angular/common": "5.2.9",
-    "@angular/compiler": "5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
     "@angular/compiler-cli": "^5.2.9",
-    "@angular/core": "5.2.9",
-    "@angular/forms": "5.2.9",
-    "@angular/http": "5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
     "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "5.2.9",
-    "@angular/platform-browser-dynamic": "5.2.9",
-    "@angular/platform-server": "5.2.9",
-    "@angular/router": "5.2.9",
-    "@ngtools/webpack": "^6.0.0-beta.8",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/platform-server": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "@ngtools/webpack": "^1.9.0",
     "@types/chai": "4.1.2",
     "@types/jasmine": "2.8.6",
     "@types/webpack-env": "1.13.5",
@@ -51,10 +51,10 @@
     "preboot": "6.0.0-beta.3",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.12",
-    "rxjs": "5.5.8",
+    "rxjs": "^5.5.8",
     "style-loader": "0.20.3",
     "to-string-loader": "1.1.5",
-    "typescript": "^2.8.1",
+    "typescript": "^2.4.2",
     "url-loader": "1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
@@ -64,21 +64,21 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^4.4.4",
+    "@angular/animations": "5.2.9",
     "@angular/cdk": "^5.2.4",
-    "@angular/common": "^4.4.4",
-    "@angular/compiler": "^4.4.4",
-    "@angular/compiler-cli": "^4.4.4",
-    "@angular/core": "^4.4.4",
-    "@angular/forms": "^4.4.4",
-    "@angular/http": "^4.4.4",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
     "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^4.4.4",
-    "@angular/platform-browser-dynamic": "^4.4.4",
-    "@angular/platform-server": "^4.4.4",
-    "@angular/router": "^4.4.4",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@angular/platform-server": "5.2.9",
+    "@angular/router": "5.2.9",
+    "@ngtools/webpack": "^6.0.0-beta.8",
     "@auth0/angular-jwt": "^1.1.0",
-    "@ngtools/webpack": "^1.9.0",
     "@types/jwt-decode": "^2.2.1",
     "amazing-time-picker": "^1.5.3",
     "angular2-jwt": "^0.2.3",
