--- a/Conectados2/package.json
+++ b/Conectados2/package.json
@@ -7,12 +7,15 @@
   },
   "devDependencies": {
     "@angular/animations": "4.2.5",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cli": "^1.7.3",
     "@angular/common": "4.2.5",
     "@angular/compiler": "4.2.5",
     "@angular/compiler-cli": "4.2.5",
     "@angular/core": "4.2.5",
     "@angular/forms": "4.2.5",
     "@angular/http": "4.2.5",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "4.2.5",
     "@angular/platform-browser-dynamic": "4.2.5",
     "@angular/platform-server": "4.2.5",
@@ -21,8 +24,7 @@
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
     "@types/webpack-env": "1.13.0",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/material": "^2.0.0-beta.8",
+    "angular-async-local-storage": "^4.0.0",
     "angular2-router-loader": "0.3.5",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
@@ -77,6 +79,7 @@
     "@auth0/angular-jwt": "^1.1.0",
     "@types/jwt-decode": "^2.2.1",
     "amazing-time-picker": "^1.5.3",
+    "angular-async-local-storage": "^4.0.0",
     "angular2-jwt": "^0.2.3",
     "jwt-decode": "^2.2.0"
   }
