--- a/Conectados2/appsettings.json
+++ b/Conectados2/appsettings.json
@@ -1,7 +1,7 @@
 {
     "AppSettings": {
         "Secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
-        "ConexionJohhny": "data source=JHONGGER-PC;initial catalog=conectaDB;;user id=sa;password=root;integrated security=True;MultipleActiveResultSets=True",
+        "ConexionJohhny": "data source=ROSA20;initial catalog=conectaDB;;user id=sa;password=root;integrated security=True;MultipleActiveResultSets=True",
         "ConexionMarthin": "data source=NotHP;initial catalog=conectaDB;;user id=sa;password=root;integrated security=True;MultipleActiveResultSets=True",
         "conexionAzure": "Server=tcp:conectados220180403104748dbserver.database.windows.net,1433;Initial Catalog=conectaDB;Persist Security Info=False;User ID=jhongger;Password=Cotos123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
