--- a/Conectados2/package.json
+++ b/Conectados2/package.json
@@ -64,6 +64,7 @@
     "webpack-cli": "^2.0.14",
     "webpack-hot-middleware": "2.21.2",
     "webpack-merge": "4.1.2",
+    "websocket": "^1.0.25",
     "zone.js": "0.8.23"
   },
   "dependencies": {
