html de graficos

--- a/Conectados2/package.json
+++ b/Conectados2/package.json
@@ -31,6 +31,7 @@
     "awesome-typescript-loader": "4.0.1",
     "bootstrap": "^3.3.7",
     "chai": "4.1.2",
+    "chart.js": "^2.7.2",
     "css": "2.2.1",
     "css-loader": "0.28.11",
     "es6-shim": "0.35.3",
@@ -92,6 +93,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "fs": "0.0.1-security",
     "jwt-decode": "^2.2.0",
-    "net-socket": "^1.1.0"
+    "net-socket": "^1.1.0",
+    "ng2-charts": "^1.6.0"
   }
 }
